fixed actions table going out of container

--- a/pwa/src/templates/actionsTemplate/ActionsTemplate.module.css
+++ b/pwa/src/templates/actionsTemplate/ActionsTemplate.module.css
@@ -36,6 +36,18 @@
   overflow-x: auto;
 }
 
+.details {
+  position: -webkit-sticky;
+  position: sticky;
+  right: 0;
+  z-index: 2;
+}
+
+.actionName {
+  word-break: break-word;
+  min-width: 250px;
+}
+
 /* Status colors */
 .statusOk {
   --conduction-tag-background-color: var(--gateway-ui-color-green);
